--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
-<div class="background">
-  <p class="index_top">必要なものを近くのお店から</p>
-  <p class="index_topp">借りよう</p>
+<div id='main_back_img'>
+  <div class='main_img_title'>
+    <p class='top_main_title'>必要なものを近くのお店から</p>
+    <p class='top_read_title'>借りよう</p>
+  </div>
 </div>
 <% @posts.each do |post| %>
   <div>
