--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -1,83 +1,3 @@
-body {
-  margin: 0px;
-}
-
-#header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color:#fff;
-  box-shadow: rgb(0 0 0 / 18%) 0px 2px 4px;
-  height: 100px;
-}
-.background {
-  background-image: url('brick-wall-gd55dc5c95_1920.jpg');
-  height: 800px;
-  background-size: cover;
-}
-#header_left {
-  display: flex;
-  align-items: center;
-  margin-left: 100px;
-}
-
-#header_left h2 {
-  margin: 0px;
-
-}
-
-#header_left h3 {
-  margin: 0px;
-  padding-left: 50px;
-}
-
-#header_right {
-  display: flex;
-  list-style-type: none;
-  margin: 0px;
-  margin-right: 100px;
-}
-
-#header_right a {
-  text-decoration: none;
-  color: black;
-  padding-left: 50px;
-  margin-right: 30px;
-  position: relative;
-  display: inline-block;
-  font-weight: bold;
-  padding: 0.25em 0.5em;
-  text-decoration: none;
-  color: #ECECEC;
-  background: #07b53b;
-  transition: .4s;
-}
-
-#header_right a:hover {
-  background-color: #07b53b;;
-  color: white;
-}
-/* ここまでヘッダー */
-/* ルーティングを書いて新しい投稿ページ作成 */
-.image {
-  width: 300px;
-  height: 300px;
-}
-
-.index_top {
-  font-size: 80px;
-  color: #fff;
-  padding-top: 300px;
-  margin: 0px;
-  text-align: center;
-}
-
-.index_topp{
-  font-size: 80px;
-  color: #fff;
-  text-align: center;
-}
-
 /*====================
 スマホを基本設計にする
  - 〜479px：スマートフォン縦
@@ -89,30 +9,224 @@ body {
   
 /* 〜479px：SP縦
 ------------------------------ */
-ここに基本CSSを書きます。
-モバイルファーストでは、モバイル最小値からPCの大きさに向けて、以降のCSSを書いていきます。
-  
-  
-/* 480px〜599px：SP横
------------------------------- */
-@media (min-width:480px) and (max-width:599px) { 
- ここにCSSコードを書く。
+html {
+  font-size: 62.5%;
 }
-  
+.image {
+  width: 300px;
+  height: 300px;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+::before , ::after {
+  box-sizing: inherit;
+}
+button {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  border: 0;
+  border-radius: 0;
+  background: transparent;
+  color: inherit;
+  vertical-align: middle;
+  text-align: inherit;
+  font: inherit;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+main {
+  padding: 0px;
+}
+
+#header_main {
+  width: 100%;
+  height: 68px;
+  display: flex;
+  padding: 0px 28px;
+  border-bottom: 1px solid #e5e5e5;
+  position: fixed;
+  background-color: white;
+}
+
+#header_left {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+  width: 50%;
+
+}
+
+#header_right {
+  height: 100%;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#header_img {
+  max-width: 180px;
+  min-width: 110px;
+}
+/* --------------------------------------------------------------------- */
+#test {  /*mainタグを引き下げ*/
+  padding-top: 68px;
+}
+
+#header_list {
+  display: flex;
+  list-style: none;
+}
+
+#header_list li {
+  padding-right: 10px;
+}
+
+#header_nav {
+  padding-right: 10vw;
+}
+
+.header_menu a {
+  color: #333;
+  text-decoration: none;
+}
+/**************** 以下、ハンバーガーボタンのスタイリング ****************/
+.btn {
+  /* ボタンの配置位置  */
+  position: fixed;
+  top: 24px;
+  right: 29px;
+  /* 最前面に */
+  z-index: 10;
+  /* ボタンの大きさ  */
+  width: 32px;
+  height: 24px;
+}
+/***** 真ん中のバーガー線 *****/
+.btn-line {
+  display: block;
+  /* バーガー線の位置基準として設定 */
+  position: relative;
+  /* 線の長さと高さ */
+  width: 100%;
+  height: 5px;
+  /* バーガー線の色 */
+  background-color: #666;
+  transition: .9s;
+  border-radius: 10px;
+}
+/***** 上下のバーガー線 *****/
+.btn-line::before , .btn-line::after {
+  content: "";
+  /* 基準線と同じ大きさと色 */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #666;
+  transition: .5s;
+  border-radius: 10px;
+}
+.btn-line::before {
+  /* 上の線の位置 */
+  transform: translateY(-11px);
+}
+.btn-line::after {
+  /* 下の線の位置 */
+  transform: translateY(11px);
+}
+/***** メニューオープン時 *****/
+.btn-line.open {
+  /* 真ん中の線を透明に */
+  background-color: transparent;
+}
+.btn-line.open::before , .btn-line.open::after {
+  content: "";
+  background-color: #333;
+  transition: .2s 
+}
+.btn-line.open::before {
+  /* 上の線を傾ける */
+  transform: rotate(45deg);
+}
+.btn-line.open::after {
+  /* 上の線を傾ける */
+  transform: rotate(-45deg);
+}
+
+
+
+
+/**************** ここまで、ハンバーガーボタンのスタイリング ****************/
+/**************** 以下、メニューのスタイリング ****************/
+.menu {
+  /* メニューを縦に */
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  /* メニューの位置マイナス指定で画面外に */
+  right: -70%;
+  width: 70%;
+  height: 100vh;
+  background-color: rgba(167, 148, 58, .7);
+  color: #efefef;
+  transition: .3s;
+}
+.menu-list {
+  /* メニューテキスト位置をリスト内中心に */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.menu-list:hover {
+  background-color: rgba(255, 255, 255, .5);
+  color: #333;
+  cursor: pointer;
+  transition: .3s;
+}
+/***** メニューオープン時位置0にして画面内に *****/
+.menu.open {
+  position: absolute;
+  right: 0;
+}
 /* 600px〜959px：タブレット
 ------------------------------ */
-@media (min-width:600px) and (max-width:959px) {
- ここにCSSコードを書く。
+@media (min-width:800px) and (max-width:959px) {
+  html {
+    font-size: 87.5%;
+  }
+  .btn {
+    display: none;
+  }
+  .menu {
+    /* メニューを横に */
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100px;
+  }
 }
-  
-/* 960px〜1279px：小型PC
------------------------------- */
-@media (min-width:960px) and (max-width:1279px) {
- ここにCSSコードを書く。
-}
-  
-/* 1280px〜：大型PC
+
+/* 1280px〜：PC
 ------------------------------ */
 @media (min-width:1280px) {
- ここにCSSコードを書く。
+  html {
+    font-size: 100%;
+  }
+   /*ここからヘッダーの調整*/
+  
 }
+
+/**************** ここまで、メニューのスタイリング ****************/
