--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -78,6 +78,16 @@
   color: #666666;
 }
 
+#show_message {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+#show_message a{
+  font-size: 1rem;
+}
+
 .show_wrapper_text p {
   font-size: 1.5rem;
 }
@@ -147,8 +157,10 @@
   font-weight: bolder;
 }
 
-#show_comment_wrapper {
-  
+.room_dm_wrapper {
+  width: 80%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 #show_comment_submit {
@@ -160,6 +172,7 @@
   justify-content: space-between;
   align-items: center;
 }
+
 #show_comment_main {
   width: 100%;
   padding: 10px 16px 8px;
@@ -198,6 +211,48 @@
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+
+
+.submit_message_label {
+  width: 100%;
+  height: 30px;
+  margin: auto;
+  padding: 10px 16px 8px;
+  border-radius:8px;
+  border: 1px solid rgb(90, 220, 90);
+  background:rgb(90, 220, 90);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fa-envelope {
+  padding-right: 0.5rem;
+  color: #f5f5f5;
+  font-weight: bolder;
+  font-size: 1.2rem;
+}
+
+
+#show_new_message {
+  background:rgb(90, 220, 90);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  border-radius:8px;
+  border: 1px solid rgb(90, 220, 90);
+  padding: 10px 16px 8px;
+  text-decoration: none;
+}
+
+#message a{
+  color: #fff;
+  font-weight: bolder;
+  text-decoration: none;
+}
+
+
 /* 600px〜959px：タブレット
 ------------------------------ */
 @media (min-width:600px) and (max-width:959px) {
