--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
                 <%# <li class="menu-list"> <%= link_to "ログアウト", destroy_user_session_path, method: :delete %> </li> 
                 <li class="menu-list"> <%= link_to "初めての方",  inquiry_posts_path%> </li>
                 <li class="menu-list"> <%= link_to "アカウント", edit_user_registration_path%> </li>
+                <li class="menu-list"> <%= link_to "メッセージ", rooms_path%> </li>
               <% else %>
                 <li class="menu-list"> <%= link_to "マイページ",'/'%> </li>
                 <li class="menu-list"> <%= link_to '新規会員登録', new_user_registration_path %> </li>
