--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
       <p class='top_main_title'>飲食店のお酒や備品など緊急で必要な時に近くのお店に助けを求めよう!!</p>
     </div>
   </div>
-    <div id='main_explanation'>  <%# -------要修正---------%>
+    <div id='main_explanation'>
       <h3 id="main_sab_title">ぐるめらいんとは？<br>
       <p id="main_sab_title_bottom">近くの飲食店と酒類や備品の取引ができるWebサービスです!!</p></h3>
       <%= image_tag 'y0671.png',width:"30%"%>
