--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,37 +18,61 @@ body {
    margin: 0px;
 }
 
- .alert{
+.alert{
    color: white;
    font-size: 1rem;
    font-weight: bolder;
    text-align: center;
    background-color: #ff333f;
- }
+}
 
- .notice {
+.notice {
    color: white;
    font-size: 1rem;
    font-weight: bolder;
    text-align: center;
-   background-color: rgba(144, 238, 144);
- }
+   background-color: rgb(161, 236, 161);
+}
 
- #error_explanation {
+#error_explanation {
    color: white;
    text-align: center;
    background-color: #ff333f;
- }
+}
 
 
- #error_explanation ul {
+#error_explanation ul {
    font-size: 1rem;
    font-weight: bolder;
    list-style-type:  none;
- }
+}
 
- #restauline {
+#restauline {
    font-size: 1.3rem;
    font-weight: bolder;
    
- }
+}
+
+#fot_main {
+  margin-top: 13rem;
+  height: 150px;
+  background-color: rgb(248, 248, 240);
+  box-shadow: 0 0 2px #999;
+}
+
+#fot_center {
+   list-style-type: none;
+   display: flex;
+   justify-content: space-evenly;
+   padding-top: 5rem;
+}
+
+#fot_center a{
+  color: rgb(51, 51, 51);
+}
+
+#fot_p {
+  text-align: center;
+  color: #999;
+  padding-top: 40px;
+}
