--- a/app/assets/stylesheets/mypage.css
+++ b/app/assets/stylesheets/mypage.css
@@ -63,16 +63,17 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: center;
   margin-left: 1rem;
 }
 
 #mypage_price {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   font-weight: bold;
 }
 
 #mypage_time {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 
 #mypage_link_mark {
