--- a/app/assets/stylesheets/rooms_index.css
+++ b/app/assets/stylesheets/rooms_index.css
@@ -1,3 +1,7 @@
+#room_index_top {
+  margin: 0 0.5rem 0 0.5rem;
+}
+
 .room_message_link {
   font-weight: bold;
   color: rgb(51, 51, 51);
@@ -45,8 +49,9 @@
   padding-top: 3rem;
 }
 
-#room_dm_post {
-
+#dm_left {
+  display: flex;
+  align-items: center;
 }
 
 #dm_post {
@@ -74,3 +79,42 @@
   max-width: 565px;
   margin-bottom: 100px;
 }
+
+#room_index_img{
+  object-fit: contain;
+  width: 85px;
+  height: 85px;
+  border-radius: 5px;
+  background: #f5f5f5;
+}
+
+#dm_list_content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 1rem;
+}
+
+#dm_list_content p{
+  margin-top: 0.5rem;
+}
+
+
+
+@media (min-width:600px) and (max-width:959px) {
+  #room_index_img {
+    width: 105px;
+    height: 105px;
+  }
+}
+
+/* 1280px〜：PC
+------------------------------ */
+@media (min-width:960px) {
+  #room_index_img {
+    width: 110px;
+    height: 110px;
+  }
+  
+}
+
