--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -13,5 +13,5 @@
     </label>
   </div>
 <% end %>
-<%= link_to "新規会員登録", "/users/sign_up" %>
-<%= link_to "ログイン", "/users/sign_in" %>
+<%# <%= link_to "新規会員登録", "/users/sign_up" %> 
+<%# <%= link_to "ログイン", "/users/sign_in" %> 
