--- a/app/views/posts/inquiry.html.erb
+++ b/app/views/posts/inquiry.html.erb
@@ -1,17 +1,17 @@
 <div id="main_inquiry_top">
   <div id="inquiry_top_title">
-    <%= image_tag 'title7.PNG',width:'20%'%>
+    <p id='header_img'> <%= image_tag('title.png')%></p>
     <h2>とは？</h2>
   </div>
   <div id="inquiry_top_about">
     <div id="inquiry_about_left">
       <p>近くのエリアから欲しい物を見つけよう。</p>
-      <%= image_tag 'y0073.png',width:'50%'%>
+      <%= image_tag 'inq01.png',width:'50%'%>
     </div>
     <div id="inquiry_about_right">
       <p>チャットでかんたん取引!</p>
-      <p>欲しい物が見つかったらコメントしよう</p>
-      <%= image_tag 'g0309.png',width:'50%'%>
+      <p>欲しい物が見つかったらメッセージしよう</p>
+      <%= image_tag 'inq02.png',width:'50%'%>
     </div>
   </div>
   
@@ -19,7 +19,7 @@
     <div id="inquiry_explanation_left">
       <h3>売りたい人</h3>
       <div class="explanation_left one">
-        <%= image_tag 'b3141.png',width:'7%'%>
+        <%= image_tag 'left1.png',width:'7%'%>
         <div id="explanation_wrapper">
           <div id="explanation_content">
             <p>必要項目を入力して会員登録</p>
@@ -29,7 +29,7 @@
       </div>
 
       <div class="explanation_left two">
-        <%= image_tag 'b3142.png',width:'10%'%>
+        <%= image_tag 'left2.png',width:'10%'%>
         <div id="explanation_wrapper">
           <div id="explanation_content">
             <p>投稿フォームに商品内容を入力して掲載</p>
@@ -39,10 +39,10 @@
       </div>
 
       <div class="explanation_left three">
-        <%= image_tag 'b3143.png',width:'10%'%>
+        <%= image_tag 'left3.png',width:'10%'%>
         <div id="explanation_wrapper">
           <div id="explanation_content">
-            <p>コメントが来たら早速返信!!</p>
+            <p>メッセージが来たら早速返信!!</p>
           </div>
           <%= image_tag 'in3.png',width:'60%', id:"explanation_img_three"%>
         </div>
@@ -52,7 +52,7 @@
     <div id="inquiry_explanation_right">
       <h3>買いたい人</h3>
       <div class="explanation_right one">
-        <%= image_tag 'b9301.png',width:'7%'%>
+        <%= image_tag 'right1.png',width:'7%'%>
         <div id="explanation_wrapper">
           <div id="explanation_content">
             <p>必要項目を入力して会員登録</p>
@@ -62,22 +62,22 @@
       </div>
 
       <div class="explanation_right two">
-        <%= image_tag 'b9302.png',width:'10%'%>
+        <%= image_tag 'right2.png',width:'10%'%>
         <div id="explanation_wrapper">
           <div id="explanation_content">
-            <p>欲しい商品をクリックして詳細ページからコメントを入力しよう!!</p>
+            <p>欲しい商品をクリックして詳細ページからコメント or メッセージを入力しよう!!</p>
           </div>
-          <%= image_tag 'test.png',width:'50%', id:"explanation_img_two"%>
+          <%= image_tag 'rb1.png',width:'50%', id:"explanation_img_two"%>
         </div>
       </div>
 
       <div class="explanation_right three">
-        <%= image_tag 'b9303.png',width:'10%'%>
+        <%= image_tag 'right3.png',width:'10%'%>
         <div id="explanation_wrapper">
           <div id="explanation_content">
             <p>投稿者と受け渡し支払い方法を相談!</p>
           </div>
-          <%= image_tag 'testg.png',width:'60%', id:"explanation_img_three"%>
+          <%= image_tag 'rb2.png',width:'60%', id:"explanation_img_three"%>
         </div>
       </div>
     </div>
@@ -85,12 +85,12 @@
 
   <div class="explanation_bottom">
     <div class="explanation_left four">
-      <%= image_tag 'qqq.png',width:'10%'%>
+      <%= image_tag 'end1.png',width:'10%'%>
       <div id="explanation_wrapper">
         <div id="explanation_content">
           <p>受け渡し、支払い方法を相談して取引を完了!!</p>
         </div>
-        <%= image_tag 'y0073.png',width:'40%', id:"explanation_img_four"%>
+        <%= image_tag 'inq01.png',width:'40%', id:"explanation_img_four"%>
       </div>
     </div>
   </div>
