--- a/app/views/posts/mypage.html.erb
+++ b/app/views/posts/mypage.html.erb
@@ -9,12 +9,12 @@
               <div id='mypage_list'>
                 <div id="mypage_image_section">
                   <%= image_tag post.image.to_s, id:"post_image_mypage" %>
-                  <div id='mypage_list_city_id'><%= post.city_id%></div>
+                  <p id='mypage_list_city_id'><%= post.city_id%></p>
                 </div>
                 <div id="mypage_content_section">
-                  <span id="mypage_title"><%= post.title.truncate(30) %></span>
-                  <span id="mypage_price">¥<%= post.price.to_s(:delimited) %></span>
-                  <span id="mypage_time"><i class="far fa-clock"></i><%= time_ago_in_words(post.updated_at)+"前"%></span>
+                  <p id="mypage_title"><%= post.title.truncate(30) %></p>
+                  <p id="mypage_price">¥<%= post.price.to_s(:delimited) %></p>
+                  <p id="mypage_time"><i class="far fa-clock"></i><%= time_ago_in_words(post.updated_at)+"前"%></p>
                 </div>
               </div>
               <div id="mypage_link_mark">
@@ -30,12 +30,12 @@
               <div id='mypage_list'>
                 <div id="mypage_image_section">
                   <%= image_tag "y0974.png", id:"post_image_default_mypage" %>
-                  <div id='mypage_list_city_id'><%= post.city_id%></div>
+                  <p id='mypage_list_city_id'><%= post.city_id%></p>
                 </div>
                 <div id="mypage_content_section">
-                  <span id="mypage_title"><%= post.title.truncate(30) %></span>
-                  <span id="mypage_price">¥<%= post.price.to_s(:delimited) %></span>
-                  <span id="mypage_time"><i class="far fa-clock"></i><%= time_ago_in_words(post.updated_at)+"前"%></span>
+                  <p id="mypage_title"><%= post.title.truncate(30) %></p>
+                  <p id="mypage_price">¥<%= post.price.to_s(:delimited) %></p>
+                  <p id="mypage_time"><i class="far fa-clock"></i><%= time_ago_in_words(post.updated_at)+"前"%></p>
                 </div>
               </div>
               <div id="mypage_link_mark">
