--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,18 +1,7 @@
-/*====================
-スマホを基本設計にする
- - 〜479px：スマートフォン縦
- - 480px〜599px：スマートフォン横
- - 600px〜959px：タブレット
- - 960px〜1279px：小型PC
- - 1280px〜：大型PC
-====================*/
-  
-/* 〜479px：SP縦
------------------------------- */
-
 #main {
   margin: 0 0.5rem 0 0.5rem;
 }
+
 #main_back_img {
   background-image: url('y0670.png');
   background-position: center;
@@ -24,15 +13,13 @@
   border-radius: 5px;
   position: relative;
   left: 60%;
-  
 }
 
 #main_top {
   background-color: rgb(248, 248, 240);
-  
 }
 
-.top_main_title {/*要修正が必要。レスポンシブに合わせて文字サイズの変更が必要。maxfont-sizeも決める*/
+.top_main_title {
   margin: 0px;
   text-align: center;
   position: absolute;
@@ -45,8 +32,7 @@
   background:linear-gradient(transparent 80%, #FFFF00 0%);
 }
 
-
-#main_explanation { /*ーーーーーーーーーーーーーーーーーー要修正ーーーーーーーーーーーーーーーーーーーーーーーー*/
+#main_explanation {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -57,46 +43,31 @@
   margin-bottom: 1rem;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-#main_post_list { /*一番大きい親要素*/
+#main_post_list { 
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  
 }
 
-#index_image_list { /*画像と最寄り駅名を囲う親要素*/
-  padding: 0.1rem;
-  position: relative;
-}
-#index_image_list_default { /*画像と最寄り駅名を囲う親要素*/
+#index_image_list {
   padding: 0.1rem;
   position: relative;
 }
 
-#index_image { /*画像を囲う親要素*/
-  
+#index_image_list_default {
+  padding: 0.1rem;
+  position: relative;
 }
 
-#post_image { /*画像id*/
+#post_image {
   object-fit: contain;
   width: 110px;
   height: 110px;
   border-radius: 5px;
   background: #f5f5f5;
 }
-#post_image_default { /*画像id*/
+
+#post_image_default {
   object-fit: contain;
   width: 110px;
   height: 110px;
