--- a/app/assets/stylesheets/mypage.css
+++ b/app/assets/stylesheets/mypage.css
@@ -1,4 +1,3 @@
-
 #mypage_post_top {
   margin: 0 0.5rem 0 0.5rem;
 }
@@ -95,7 +94,8 @@
 
 
 
-
+/* 600px〜959px：タブレット
+------------------------------ */
 @media (min-width:600px) and (max-width:959px) {
   #post_image_mypage {
     width: 105px;
