--- a/app/assets/stylesheets/rooms_index.css
+++ b/app/assets/stylesheets/rooms_index.css
@@ -7,12 +7,14 @@
   color: rgb(51, 51, 51);
   text-decoration: none;
 }
+
 #room_dm_wrapper {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 2rem;
 }
+
 #room_dm_list {
   border-bottom: 1px solid #e5e5e5;
   width: 100%;
@@ -29,9 +31,11 @@
   text-decoration: none;
   color: #333;
 }
+
 .dm_list__content__link__box__message_time {
   color: #333
 }
+
 .dm_list__content__link__box__message {
   color: #333;
   font-weight: bold;
@@ -45,7 +49,6 @@
 }
 
 #room_dm_post {
-
   padding-top: 3rem;
 }
 
@@ -101,6 +104,8 @@
 
 
 
+/* 600px〜959px：タブレット
+------------------------------ */
 @media (min-width:600px) and (max-width:959px) {
   #room_index_img {
     width: 105px;
