--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,9 +2,8 @@
   <h1 id="edit_title">商品の情報を編集</h1> 
   <input type="hidden" id="hidden_town_id" value="<%= @town_id%>">
 
-
-  <section id='edit_form_wrapper'>
-  <%= form_with model: @post, id: "form_main" do |form|%>
+  <section id="edit_form_wrapper">
+  <%= form_with model: @post, id: 'form_main' do |form|%>
     <div class="form_section">
       <%= form.label :title, "タイトル"%>
       <div class="post_form"> 
@@ -25,7 +24,7 @@
         <%= form.number_field :price, value:"#{@post.price}" %>
       </div>
     </div>
-    
+
     <div class="form_section">
       <%= form.label :prefectures, "都道府県"%>
       <div class="post_form"> 
@@ -97,7 +96,7 @@
       </div>
     </div>
 
-        <div class="form_section">
+    <div class="form_section">
       <label>画像
         <div class="post_form" id="img_label">
           <%= form.file_field :image, id: :post_img_file, class: :file, accept: 'image/jpg,image/jpeg,image/png',style:"display:none;"%>
@@ -124,7 +123,7 @@
     <div class="actions_delete">
       <label>
         <% if current_user.id == @post.user_id %>
-          <%= link_to("投稿を削除",post_path(@post),{method: :delete, class: "destroylink",id:"form_actions_delete",data: { confirm: '本当にいいですか?' }}) %>
+          <%= link_to("投稿を削除",post_path(@post),{method: :delete, class: "destroylink",id:"form_actions_delete", data: { confirm: '本当にいいですか?' }}) %>
         <% end %>
       </label>
     </div>
